--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">Atualmente não faço faculdade, mas a experiência que estou tendo no Jovem Tech está aumentando minha curiosidade sobre esse mudo da tecnologia e programação.
+            <p class="apresentacao__conteudo__texto">Atualmente não faço faculdade, mas a experiência que estou tendo no Jovem Tech está aumentando minha curiosidade sobre esse mundo da tecnologia e programação.
             </p>
             <p class="apresentacao__conteudo__texto"> Pretendo até o final desse ano ingressar em uma faculdade da área e assim adquirir mais conhecimento, prática e capacidade profissional.
             </p>
